--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>บันทึก Waste - กลุ่มตรวจสอบคุณภาพยาสัตว์</title>
+    <title>บันทึกการจัดการของเสียเคมี - กลุ่มตรวจสอบคุณภาพยาสัตว์</title>
     <style>
         * {
             margin: 0;
@@ -13,59 +13,111 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #0f2027 0%, #203a43 50%, #2c5364 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             padding: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: 
+                radial-gradient(circle at 20% 50%, rgba(0, 255, 255, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(0, 255, 100, 0.05) 0%, transparent 50%);
+            pointer-events: none;
         }
 
         .container {
-            background: white;
-            border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            max-width: 600px;
+            background: rgba(255, 255, 255, 0.98);
+            border-radius: 16px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+            max-width: 650px;
             width: 100%;
             overflow: hidden;
+            position: relative;
+            border: 1px solid rgba(0, 188, 212, 0.2);
         }
 
         .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #00695c 0%, #00897b 50%, #26a69a 100%);
             color: white;
-            padding: 30px;
+            padding: 35px 30px;
             text-align: center;
+            position: relative;
+            border-bottom: 3px solid #00bcd4;
+        }
+
+        .header::before {
+            content: '⚗️';
+            position: absolute;
+            font-size: 80px;
+            opacity: 0.1;
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+        }
+
+        .header::after {
+            content: '🧪';
+            position: absolute;
+            font-size: 80px;
+            opacity: 0.1;
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
         }
 
         .header h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
+            font-size: 26px;
+            margin-bottom: 8px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        .header p {
+            font-size: 15px;
+            opacity: 0.95;
+            font-weight: 400;
         }
 
         .progress-container {
-            background: rgba(255,255,255,0.2);
-            height: 10px;
+            background: rgba(255, 255, 255, 0.25);
+            height: 8px;
             border-radius: 10px;
             overflow: hidden;
             margin-top: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .progress-bar {
-            background: #4ade80;
+            background: linear-gradient(90deg, #00e676, #00bcd4);
             height: 100%;
             width: 11.11%;
             transition: width 0.5s ease;
             border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 230, 118, 0.5);
         }
 
         .progress-text {
-            margin-top: 10px;
-            font-size: 14px;
+            margin-top: 12px;
+            font-size: 13px;
             opacity: 0.9;
+            font-weight: 500;
         }
 
         .content {
-            padding: 40px;
+            padding: 40px 35px;
+            background: #fafafa;
         }
 
         .question {
@@ -74,13 +126,13 @@
 
         .question.active {
             display: block;
-            animation: slideIn 0.5s ease;
+            animation: slideIn 0.4s ease;
         }
 
         @keyframes slideIn {
             from {
                 opacity: 0;
-                transform: translateX(30px);
+                transform: translateX(20px);
             }
             to {
                 opacity: 1;
@@ -89,25 +141,28 @@
         }
 
         .question-title {
-            font-size: 20px;
-            color: #1f2937;
-            margin-bottom: 20px;
+            font-size: 19px;
+            color: #263238;
+            margin-bottom: 24px;
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
+            font-weight: 600;
         }
 
         .question-number {
-            background: #667eea;
+            background: linear-gradient(135deg, #00897b, #26a69a);
             color: white;
-            width: 35px;
-            height: 35px;
-            border-radius: 50%;
+            width: 38px;
+            height: 38px;
+            border-radius: 8px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: bold;
             flex-shrink: 0;
+            box-shadow: 0 3px 8px rgba(0, 137, 123, 0.3);
+            font-size: 16px;
         }
 
         .options {
@@ -116,38 +171,44 @@
         }
 
         .option {
-            background: #f3f4f6;
-            border: 2px solid transparent;
-            border-radius: 12px;
-            padding: 15px 20px;
+            background: white;
+            border: 2px solid #e0e0e0;
+            border-radius: 10px;
+            padding: 16px 18px;
             cursor: pointer;
             transition: all 0.3s ease;
             display: flex;
             align-items: center;
-            gap: 12px;
+            gap: 14px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
 
         .option:hover {
-            background: #e5e7eb;
-            transform: translateX(5px);
+            background: #f5f5f5;
+            border-color: #00897b;
+            transform: translateX(3px);
+            box-shadow: 0 4px 12px rgba(0, 137, 123, 0.15);
         }
 
         .option.selected {
-            background: #dbeafe;
-            border-color: #3b82f6;
+            background: #e0f2f1;
+            border-color: #00897b;
+            box-shadow: 0 4px 12px rgba(0, 137, 123, 0.2);
         }
 
         .option-radio {
-            width: 20px;
-            height: 20px;
-            border: 2px solid #9ca3af;
+            width: 22px;
+            height: 22px;
+            border: 2.5px solid #9e9e9e;
             border-radius: 50%;
             position: relative;
             flex-shrink: 0;
+            transition: all 0.3s ease;
         }
 
         .option.selected .option-radio {
-            border-color: #3b82f6;
+            border-color: #00897b;
+            background: white;
         }
 
         .option.selected .option-radio::after {
@@ -156,9 +217,9 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 10px;
-            height: 10px;
-            background: #3b82f6;
+            width: 11px;
+            height: 11px;
+            background: #00897b;
             border-radius: 50%;
         }
 
@@ -167,71 +228,90 @@
         textarea,
         select {
             width: 100%;
-            padding: 15px;
-            border: 2px solid #e5e7eb;
-            border-radius: 12px;
-            font-size: 16px;
+            padding: 14px 16px;
+            border: 2px solid #e0e0e0;
+            border-radius: 10px;
+            font-size: 15px;
             transition: all 0.3s ease;
             font-family: inherit;
+            background: white;
+            color: #263238;
         }
 
         input:focus, textarea:focus, select:focus {
             outline: none;
-            border-color: #3b82f6;
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+            border-color: #00897b;
+            box-shadow: 0 0 0 3px rgba(0, 137, 123, 0.1);
+            background: #fafafa;
         }
 
         textarea {
-            min-height: 100px;
+            min-height: 110px;
             resize: vertical;
+        }
+
+        select {
+            cursor: pointer;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%2300897b' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 12px center;
+            appearance: none;
+            padding-right: 35px;
         }
 
         .buttons {
             display: flex;
-            gap: 15px;
-            margin-top: 30px;
+            gap: 12px;
+            margin-top: 32px;
         }
 
         button {
             flex: 1;
-            padding: 15px;
+            padding: 15px 20px;
             border: none;
-            border-radius: 12px;
+            border-radius: 10px;
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
         }
 
         .btn-primary {
-            background: #3b82f6;
+            background: linear-gradient(135deg, #00897b, #26a69a);
             color: white;
+            border: 2px solid transparent;
         }
 
         .btn-primary:hover:not(:disabled) {
-            background: #2563eb;
+            background: linear-gradient(135deg, #00695c, #00897b);
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(59, 130, 246, 0.3);
+            box-shadow: 0 6px 16px rgba(0, 137, 123, 0.4);
         }
 
         .btn-secondary {
-            background: #e5e7eb;
-            color: #374151;
+            background: white;
+            color: #546e7a;
+            border: 2px solid #cfd8dc;
         }
 
         .btn-secondary:hover {
-            background: #d1d5db;
+            background: #eceff1;
+            border-color: #b0bec5;
+            transform: translateY(-1px);
         }
 
         button:disabled {
-            opacity: 0.5;
+            opacity: 0.6;
             cursor: not-allowed;
+            transform: none !important;
         }
 
         .success-screen {
             display: none;
             text-align: center;
             padding: 60px 40px;
+            background: #fafafa;
         }
 
         .success-screen.active {
@@ -240,32 +320,48 @@
         }
 
         .success-icon {
-            font-size: 80px;
+            font-size: 90px;
             margin-bottom: 20px;
             animation: bounce 1s ease;
+            filter: drop-shadow(0 4px 8px rgba(0, 137, 123, 0.3));
         }
 
         @keyframes bounce {
             0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
+            50% { transform: translateY(-15px); }
+        }
+
+        .success-screen h2 {
+            color: #00695c;
+            font-size: 28px;
+            margin-bottom: 12px;
+            font-weight: 600;
+        }
+
+        .success-screen p {
+            color: #546e7a;
+            font-size: 16px;
+            margin-bottom: 30px;
         }
 
         .required {
-            color: #ef4444;
+            color: #d32f2f;
+            font-weight: bold;
         }
 
         .helper-text {
-            font-size: 14px;
-            color: #6b7280;
+            font-size: 13px;
+            color: #78909c;
             margin-top: 8px;
+            font-style: italic;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>🎮 บันทึกการทิ้ง Waste</h1>
-            <p>กลุ่มตรวจสอบคุณภาพยาสัตว์</p>
+            <h1>⚗️ บันทึกการจัดการของเสียเคมี</h1>
+            <p>กลุ่มตรวจสอบคุณภาพยาสัตว์ • ห้องปฏิบัติการ</p>
             <div class="progress-container">
                 <div class="progress-bar" id="progressBar"></div>
             </div>
@@ -379,9 +475,9 @@
         </div>
 
         <div class="success-screen" id="successScreen">
-            <div class="success-icon">🎉</div>
-            <h2 style="color:#1f2937;margin-bottom:15px;">บันทึกสำเร็จ!</h2>
-            <p style="color:#6b7280;margin-bottom:30px;">ข้อมูลของคุณถูกบันทึกเรียบร้อยแล้ว</p>
+            <div class="success-icon">✅</div>
+            <h2>บันทึกข้อมูลสำเร็จ</h2>
+            <p>ระบบได้บันทึกข้อมูลของเสียเคมีเรียบร้อยแล้ว</p>
             <button class="btn-primary" onclick="location.reload()">บันทึกอีกครั้ง</button>
         </div>
     </div>
@@ -541,7 +637,7 @@
             document.getElementById('progressBar').style.width = prog + '%';
             document.getElementById('progressText').textContent = 'คำถามที่ ' + currentStep + ' จาก ' + totalSteps;
             document.getElementById('prevBtn').style.display = currentStep > 1 ? 'block' : 'none';
-            document.getElementById('nextBtn').textContent = currentStep === totalSteps ? 'ส่งข้อมูล 🎯' : 'ถัดไป →';
+            document.getElementById('nextBtn').textContent = currentStep === totalSteps ? 'ส่งข้อมูล ⚗️' : 'ถัดไป →';
         }
 
         async function submitForm() {
